--- a/项目演示截图.md
+++ b/项目演示截图.md
@@ -2,38 +2,38 @@
 
 **登录界面：**默认登录账号是admin，密码是123456，输入框含有表单验证，重置按钮可以重置伟默认账号密码
 
-![img](file:///C:/Users/20444/AppData/Local/Temp/msohtmlclip1/01/clip_image002.jpg)
+[图片1.png (554×297) (gitee.com)](https://gitee.com/zzt-learning/vue-back-shop/raw/master/项目演示截图/图片1.png)
 
-![img](file:///C:/Users/20444/AppData/Local/Temp/msohtmlclip1/01/clip_image004.jpg)
+[图片2.png (554×297) (gitee.com)](https://gitee.com/zzt-learning/vue-back-shop/raw/master/项目演示截图/图片2.png)
 
 **主页面：**头部有一个退出登录功能，侧边栏是折叠的功能栏
 
-![img](file:///C:/Users/20444/AppData/Local/Temp/msohtmlclip1/01/clip_image006.jpg)
+[图片3.png (554×297) (gitee.com)](https://gitee.com/zzt-learning/vue-back-shop/raw/master/项目演示截图/图片3.png)
 
 **用户管理模块：**可查询、可添加、可修改、可删除、可分配角色，按钮都可用，对话框可拖拽
 
-![img](file:///C:/Users/20444/AppData/Local/Temp/msohtmlclip1/01/clip_image008.jpg)
+[图片4.png (554×297) (gitee.com)](https://gitee.com/zzt-learning/vue-back-shop/raw/master/项目演示截图/图片4.png)
 
 **权限管理模块：**同上
 
-![img](file:///C:/Users/20444/AppData/Local/Temp/msohtmlclip1/01/clip_image010.jpg)
+[图片5.png (554×297) (gitee.com)](https://gitee.com/zzt-learning/vue-back-shop/raw/master/项目演示截图/图片5.png)
 
-![img](file:///C:/Users/20444/AppData/Local/Temp/msohtmlclip1/01/clip_image012.jpg)
+[图片6.png (554×297) (gitee.com)](https://gitee.com/zzt-learning/vue-back-shop/raw/master/项目演示截图/图片6.png)
 
 **商品管理模块：**同上，此外添加了BackTop回到顶部的功能按钮（见本模块图三右下角）
 
-![img](file:///C:/Users/20444/AppData/Local/Temp/msohtmlclip1/01/clip_image014.jpg)
+[图片7.png (554×297) (gitee.com)](https://gitee.com/zzt-learning/vue-back-shop/raw/master/项目演示截图/图片7.png)
 
-![img](file:///C:/Users/20444/AppData/Local/Temp/msohtmlclip1/01/clip_image016.jpg)
+[图片8.png (554×297) (gitee.com)](https://gitee.com/zzt-learning/vue-back-shop/raw/master/项目演示截图/图片8.png)
 
-![img](file:///C:/Users/20444/AppData/Local/Temp/msohtmlclip1/01/clip_image018.jpg)
+[图片9.png (554×297) (gitee.com)](https://gitee.com/zzt-learning/vue-back-shop/raw/master/项目演示截图/图片9.png)
 
  
 
 **订单管理模块：**同上，但是绿色按钮的定位功能没有完善，也有滚动一定距离后显示BackTop按钮
 
-![img](file:///C:/Users/20444/AppData/Local/Temp/msohtmlclip1/01/clip_image020.jpg)
+[图片10.png (554×297) (gitee.com)](https://gitee.com/zzt-learning/vue-back-shop/raw/master/项目演示截图/图片10.png)
 
 **数据统计模块：**
 
-![img](file:///C:/Users/20444/AppData/Local/Temp/msohtmlclip1/01/clip_image022.jpg)
+[图片11.png (554×297) (gitee.com)](https://gitee.com/zzt-learning/vue-back-shop/raw/master/项目演示截图/图片11.png)
